# distill-ai

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.trae/documents/: ai-knowledge-distillation-plan.md
.trae/rules/: ui-rules.md
.trae/specs/ai-knowledge-distillation/: 2026-06-18-phase5-knowledge-graph-design.md  2026-06-18-phase5-knowledge-graph-plan.md  2026-06-18-phase6-media-integration-design.md  2026-06-18-phase6-media-integration-plan.md  Design.md  PRD.md  Plan.md  checklist.md
apps/extension/: manifest.json  package.json  tsconfig.json  vite.config.ts
apps/extension/src/background/: index.ts
apps/web/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  next.config.ts  package.json  pnpm-lock.yaml  prisma.config.ts  vercel.json
apps/web/prisma/: schema.prisma
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/app/: layout.tsx  (+2 more)
docs/: COMPETITION_DEMO_POST.md  DEPLOY_MEDIA_SERVICE.md  DEPLOY_VERCEL.md  USER_GUIDE.md
docs/superpowers/specs/: 2026-06-21-asr-user-config-design.md
services/media-processor/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
services/media-processor/app/: __init__.py  config.py  main.py
services/media-processor/app/api/: asr.py  douyin.py  pdf.py  xiaohongshu.py
services/media-processor/app/core/: __init__.py  asr_provider.py  audio_extractor.py  downloader.py  pdf_extractor.py  xhs_extractor.py
services/media-processor/app/schemas/: __init__.py  media.py
services/media-processor/app/utils/: cleanup.py
(+87 files in other folders)
