[project]
name = "media-processor"
version = "0.1.0"
description = "Distill 媒体处理服务 - 抖音/小红书/PDF 解析"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Distill Team" }
]

[tool.ruff]
# PEP 8 强制配置
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long（由 black 处理）
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
